@@ -1,20 +1,6 @@
 ---
 version: 2.0.0
 checks:
-  oval:com.puppet.forge.simp.issue.profile.el6:
-    settings:
-      parameter: issue::profile
-      value: default
-    type: puppet-class-parameter
-    controls:
-      nist_800_53:rev4: true
-      nist_800_53:rev4:AC-8: true
-    identifiers:
-      nist_800_53:rev4:
-      - AC-8
-    confine:
-      osfamily: RedHat
-      operatingsystemmajrelease: '6'
   oval:com.puppet.forge.simp.issue.profile:
     settings:
       parameter: issue::profile
@@ -32,9 +18,6 @@ checks:
       - SRG-OS-000023-GPOS-00006
       - SRG-OS-000024-GPOS-00007
       - CCI-000048
-    confine:
-      osfamily: RedHat
-      operatingsystemmajrelease: '7'
     oval-ids:
     - xccdf_org:ssgproject:content_rule_banner_etc_issue
     - banner_etc_issue
@@ -49,6 +32,3 @@ checks:
     identifiers:
       nist_800_53:rev4:
       - AC-8
-    confine:
-      osfamily: RedHat
-      operatingsystemmajrelease: '7'
